# swamp

./: .dockerignore  .gitignore  Dockerfile  README.md  dev_supervisord.conf  dupa.py  go.mod  go.sum  icons.py  main.go  nginx.conf  notes.txt  package-lock.json  pyproject.toml  supervisord.conf
.github/workflows/: build_and_push.yaml
backend/: pyproject.toml  requirements.txt
backend/backend/: main.py  model.py  utils.py
backend/backend/modules/: aws.py  k8s.py
backend/integration_tests/: client.py
backend/tests/: api.py  test_model.py  test_utils.py
frontend/: config-overrides.js  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  Backend.js  BackendProvider.js  Bar.js  D3ForceLayoutProvider.jsx  DagreLayoutProvider.jsx  DataDisplay.jsx  DisplayRecord.jsx  ELKLayoutProvider.jsx  Edge.jsx  EmbedWizard.jsx  FieldPicker.jsx  Flow.js  Flow.jsx  GenericPicker.jsx  GraphTab.js  Icons.js  JQPicker.jsx  LabelOp.js  LabelPicker.jsx  Link.js  Menu.js  Menu.jsx  MultipleFieldPicker.jsx  NiceButton.js  Parameter.js  Picker.jsx  PreviewFlow.jsx  PreviewNode.jsx  Query.jsx  QueryState.js  QueryWizard.jsx  Resource.jsx  Service.ts  SingleFieldPicker.jsx  SingleLabelValPicker.jsx  StateManager.js  StateManagerProvider.js  (+9 more)
internal/aws/: client.go  client_test.go  connection.go  definition.json  factory.go  item_schema.json  link_schema.json  main.go  main_test.go  profile.go  profile_test.go  reader.go  reader_test.go  utils.go
internal/cli/: cli.go  definition.json
internal/command/: main.go
internal/common/: enums.go
internal/config/: main.go
overread/: cli.py  execution.py  get.py  model.py  modules.py  render.py
swamp/: pyproject.toml
swamp/swamp/: _cli.py  model.py
swamp/swamp/modules/: aws.py  k8s.py
(+76 files in other folders)
