[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jakub Bondyra <jb10193@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
backend = "backend.main:start"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
aioboto3 = "^12.3.0"
pydantic = "2.10.4"
jsonpath-ng = "1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
